--- a/public/base.css
+++ b/public/base.css
@@ -39,7 +39,11 @@ display: flex;
     justify-content: center;
     align-items: center;
 }
+/*
+button{
 
+	background-color:rgb(0,10,10); 
+}*/
 .button {
         border: 1px transparent;
 
@@ -53,7 +57,7 @@ display: flex;
         padding: 8px 30px;
         text-align: center;
         text-decoration: none;
-        margin-left: 20px;
+        
         -webkit-animation: glowing 1300ms infinite;
         -moz-animation: glowing 1300ms infinite;
         -o-animation: glowing 1300ms infinite;
