--- a/public/base.css
+++ b/public/base.css
@@ -44,6 +44,17 @@ button{
 
 	background-color:rgb(0,10,10); 
 }*/
+
+
+input{
+
+
+}
+
+section {
+
+  display:flex;
+}
 .button {
         border: 1px transparent;
 
