--- a/public/base.css
+++ b/public/base.css
@@ -39,16 +39,31 @@ display: flex;
     justify-content: center;
     align-items: center;
 }
-/*
+
 button{
 
-	background-color:rgb(0,10,10); 
-}*/
+	/*background-color:rgb(0,10,10); */
+  
+}
 
 
 input{
 
+  color:black;
 
+
+
+
+}
+
+ul{
+
+
+  width: 280px;
+  color:white;
+  border: 3px purple double;
+  border-radius:3px;
+  padding: 1em;
 }
 
 section {
