changement mineur css

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -4,7 +4,7 @@
 	--dark-color-b: #fff00f;
 	--dark-color-a: #f00;
 	--dark-color-c:black;
-	--light-color: #2427c2;
+	--light-color: black;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
